--- a/src/Overseer.WebApp/Content/css/styles.css
+++ b/src/Overseer.WebApp/Content/css/styles.css
@@ -1,3 +1,21 @@
 ﻿body {
     padding-top: 50px;
 }
+
+.main {
+    margin-top: 15px;
+}
+
+.container {
+    width: 1000px;
+}
+
+.navbar {
+    background-color: steelblue;
+}
+
+td.price {
+    text-align: right;
+    font-size: 16px;
+    font-weight: bold;
+}
