--- a/src/Overseer.WebApp/Content/css/styles.css
+++ b/src/Overseer.WebApp/Content/css/styles.css
@@ -1,21 +1,17 @@
-﻿body {
-    padding-top: 50px;
-}
+﻿body { padding-top: 50px; }
 
-.main {
-    margin-top: 15px;
-}
+.main { margin-top: 15px; }
 
-.container {
-    width: 1000px;
-}
+.container { width: 1000px; }
 
-.navbar {
-    background-color: steelblue;
-}
+.navbar { background-color: steelblue; }
 
 td.price {
     text-align: right;
     font-size: 20px;
     font-weight: bold;
+}
+
+td.region {
+    color: gray;
 }
